# cloudymud

./: README.md  clean.sh  install.sh
cloudy-core/: ChangeLog.md  cloudy-core.cabal
cloudy-core/data/help/: go.txt  who.txt
cloudy-core/src/: Main.hs
cloudy-core/src/Cloudy/Mud/Core/: Parser.hs
cloudy-datatypes/: ChangeLog.md  LICENSE  cloudy-datatypes.cabal
cloudy-datatypes/src/Cloudy/Mud/: Database.hs  Datatypes.hs  Misc.hs
cloudy-front/: cloudy-front.cabal  persist.txt
cloudy-front/src/: Main.hs  test.txt
cloudy-front/src/Cloudy/Chat/: Parser.hs
cloudy-front/test/: Main.hs
cloudy-watcher/: ChangeLog.md  LICENSE  cloudy-watcher.cabal
cloudy-watcher/src/: Main.hs
cloudy-web/: ChangeLog.md  LICENSE  cloudy-web.cabal  index.html
cloudy-web/src/: Main.hs
