name: cloudy-front
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
synopsis: Basic chat server front end to a core using Cloud Haskell
description:
    A chat server using Cloud Haskell that connects to a core

executable cloudy-front
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        distributed-process -any,
        network-transport-tcp -any,
        containers -any,
        binary -any,
        cgi -any,
        strict -any,
        bytestring -any,
        unordered-containers -any,
        hashable -any,
        network -any,
        parsec -any,
        cloudy-datatypes -any,
        data-default -any,
        hasbolt -any,
        text -any 
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-cloudy-front
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
